--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
 
                 <div class="project">
                     <h3><a href="https://github.com/Harshavardhanchary/Library-Manager.git" target="_blank">Library Manager</a></h3>
-                    <p>Devopsified a two-tier appliccation from scratch.</p>
+                    <p>Devopsified a two-tier application from scratch.</p>
                     <div class="tech-stack">
                         <span class="tech">Jenkins</span>
                         <span class="tech">EC2</span>
