--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Harsha's space</title>
+    <!-- Favicon -->
+    <link rel="icon" href="https://img.icons8.com/?size=32&id=mdhlgfHyFQ_C&format=png&color=000000" type="image/png">
     <style>
         * {
             margin: 0;
@@ -283,7 +285,7 @@ Passionate about building scalable systems, improving workflows, and continuousl
                     </div>
                 </div>
                 <div class="project">
-                    <h3><a href="https://github.com/Harshavardhanchary/chattingo/" target="_blank">Real-Time Chat Application</a></h3>
+                    <h3><a href="https://github.com/Harshavardhanchary/chattingo" target="_blank">Real-Time Chat Application</a></h3>
                     <p>A full-stack real-time chat application built with React, Spring Boot, and WebSocket technology, with a strong emphasis on DevOps practices and CI/CD automation. The application is containerized using Docker and deployed through a Jenkins CI/CD pipeline, leveraging Jenkins Shared Libraries to keep pipelines clean, reusable, and scalable.</p>
                     <div class="tech-stack">
                         <span class="tech">React</span>
